# Zadanie2_SO

./: Makefile.am  README.md  configure.ac  main.c  objetosc.c  objetosc.h  pola.c  pola.h
